--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -3,6 +3,10 @@ spring:
     url: jdbc:tc:mysql:5.7.38:///test
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
 
+  redis:
+    host: 127.0.0.1
+    port: 6379
+
   jpa:
     hibernate:
       ddl-auto: create-drop
